[gd_scene load_steps=2 format=2]

[ext_resource path="res://temperature_converter/temperature_converter.gd" type="Script" id=1]

[node name="TemperatureConverter" type="HBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -143.5
margin_top = -12.0
margin_right = 143.5
margin_bottom = 12.0
custom_constants/separation = 10
script = ExtResource( 1 )

[node name="CelsiusLineEdit" type="LineEdit" parent="."]
margin_right = 58.0
margin_bottom = 24.0

[node name="CelsiusLabel" type="Label" parent="."]
margin_left = 68.0
margin_top = 5.0
margin_right = 126.0
margin_bottom = 19.0
text = "Celsius ="

[node name="FahrenheitLineEdit" type="LineEdit" parent="."]
margin_left = 136.0
margin_right = 194.0
margin_bottom = 24.0

[node name="FahrenheitLabel" type="Label" parent="."]
margin_left = 204.0
margin_top = 5.0
margin_right = 272.0
margin_bottom = 19.0
text = "Fahrenheit"
[connection signal="text_changed" from="CelsiusLineEdit" to="." method="_on_celsius_text_changed"]
[connection signal="text_changed" from="FahrenheitLineEdit" to="." method="_on_fahrenheit_text_changed"]
